# zhamel

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: args.rs  block_cache.rs  bootmgr.rs  commands.rs  console.rs  currdev.rs  debug.rs  devsw.rs  error.rs  exit.rs  gpt.rs  handoff.rs  heap.rs  interactive.rs  lib.rs  main.rs  mbr.rs  secureboot.rs  startup.rs  tang.rs  time.rs  uefi_tests.rs
src/env/: hooks.rs  loader.rs  mod.rs  parser.rs
src/fs/: iso9660.rs  mod.rs  uefi.rs  ufs.rs
src/fs/fixtures/: ufs1-superblock.fixture  ufs2-superblock.fixture
src/kernel/: elf.rs  mod.rs  module.rs  modulep.rs  types.rs
src/kernel/fixtures/: elf64-single.hex  elf64-two-seg.hex
src/uefi_helpers/: block_io.rs  device_path.rs  mod.rs
src/zfs/: crypt.rs  fs.rs  label.rs  mod.rs  nvlist.rs  sha1.rs  sha256.rs  unlock.rs
src/zfs/reader/: checksum.rs  dnode.rs  io.rs  lz4.rs  mod.rs  mos.rs  objset.rs  types.rs  zap.rs
tests/integration/scenarios/: README.md
tests/integration/scenarios/fail-timeout/: expect.txt  loader.conf
tests/integration/scenarios/interactive-cmds/: expect.txt  loader.env
tests/integration/scenarios/kernel-load/: expect.txt
tests/integration/scenarios/kernel-load-iso/: expect.txt  kernel.txz.modules  loader.conf
tests/integration/scenarios/kernel-load-modules/: expect.txt
tests/integration/scenarios/lsefi/: expect.txt  loader.conf  loader.env
tools/: coverage  coverage.sh  edk2-build-http-drivers.sh  edk2-build-network-drivers.sh  uefi-integration-assets.sh  uefi-integration-runner.sh  uefi-test-runner.sh
(+33 files in other folders)
