[package]
name = "zhamel"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.10.5"
log = "0.4"
p256 = { version = "0.13.2", default-features = false, features = ["arithmetic", "ecdh"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
uefi = { version = "0.36", features = ["alloc", "logger"] }
uefi-raw = { version = "0.13.0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
test-uefi-anyway = []
host-coverage = []